# odin-dxp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_templates_no_literal_tags.py  license  package.json  pyproject.toml  tailwind.config.cjs  tailwind.config.js  tsconfig.json
apps/admin_branding/: apps.py  wagtail_hooks.py
apps/admin_branding/static/css/: odin-admin.css
apps/cms_integration/: apps.py  blocks.py  mixins.py  models.py  pages.py  settings.py  snippets.py  urls.py  views.py
apps/cms_integration/migrations/: 0001_initial.py  0002_alter_homepage_body_navigationsettings.py  0003_alter_partner_options_alter_speaker_options.py  0004_alter_navigationsettings_options_alter_homepage_body.py  0005_alter_homepage_body_alter_speaker_photo_public_id_and_more.py  0006_headersettings_cta_buttons_and_more.py  0007_alter_homepage_body.py  0008_homepage_event_end_date_homepage_event_location_and_more.py  0009_alter_homepage_body.py  0010_partner_uniq_partner_name_and_more.py  0011_remove_partner_uniq_partner_name_and_more.py  0012_speakersindexpage_sponsorsindexpage_partner_slug_and_more.py  0013_alter_footersettings_options_and_more.py  0014_footersettings_show_floating_social_bar_and_more.py  0015_alter_homepage_body.py  0016_flashsalesettings.py  0017_alter_homepage_body_cookiesettings.py  0018_partner_logo_upload_speaker_photo_upload_and_more.py  0019_alter_speaker_photo_public_id.py  0020_partnersindexpage_alter_partner_options_and_more.py  0021_alter_homepage_body.py  0022_footersettings_company_address_and_more.py  0023_alter_footersettings_company_address_and_more.py  0024_remove_footersettings_show_floating_social_bar_and_more.py  0025_footersettings_enquiries_email_and_more.py
apps/cms_integration/utils/: cloudinary_upload.py
apps/core/: urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_delete_homepage.py
apps/core/templatetags/: cloudinary_helper.py
assets/css/: input.css  tailwind.css
config/: settings.py  urls.py
pc_cache/: db.db
static/css/: input.css  tailwind.css
static/icons/: site.webmanifest
static/js/: alpine.ts
static/js/types/: alpinejs__collapse.d.ts  gsap.d.ts
templates/: base.html
templates/admin/: odin_dashboard_panel.html
templates/blocks/: hero_block.html
templates/cms_integration/: home_page.html
templates/cms_integration/blocks/: content_block.html  countdown_block.html  faq_section_block.html  hero_block.html  hubspot_form.html  nexus_feature_grid.html  partner_carousel.html  partner_grid_block.html  speaker_grid_block.html  sponsors_grid_block.html  testimonial_grid_block.html
templates/cms_integration/partials/: partners_grid.html  speakers_grid.html  sponsors_grid.html
templates/cms_integration/partials/cards/: partner_card.html  speaker_card.html  sponsor_card.html
templates/partials/: cookie_consent.html  footer.html  header.html  social_floating.html
templates/partials/cards/: speaker_card.html  sponsor_card.html
typings/cloudinary/: uploader.pyi
