[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "event-platform"
version = "0.1.0"
description = "High-performance event & marketing platform (Django-based)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "Django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-htmx>=1.21,<2.0",
    "django-redis>=5.4,<6.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "Pillow>=11.0,<12.0",
    "whitenoise>=6.7,<7.0",
    "gunicorn>=23.0,<24.0",
    "uvicorn[standard]>=0.30,<1.0",
    "cloudinary>=1.41,<2.0",
    "django-cors-headers>=4.4,<5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "coverage[toml]>=7.6,<8.0",
    "pre-commit>=4.0,<5.0",
    "django-stubs[compatible-mypy]>=5.0,<6.0",
    "djangorestframework-stubs>=3.15,<4.0",
    "types-requests>=2.32,<3.0",
]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = []
line-length = 120
target-version = "py312"
fix = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = false
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
addopts = "-ra -q --disable-warnings"

[tool.coverage.run]
branch = true
source = ["apps", "config"]

[tool.coverage.report]
show_missing = true
skip_covered = true
